# earth2-weather-analytics

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  docker-compose.yaml  example_pipeline.ipynb  notebook_requirements.txt  setup.sh  sonar-project.properties
earth-2-federation/: .gitignore  README.md  federations.yaml  pyproject.toml
earth-2-federation/federation/: README.md  __init__.py
earth-2-federation/federation/api/: __init__.py
earth-2-federation/federation/configs/: federation.dfm.yaml  project.yaml
earth-2-federation/federation/fed/api/: cbottle.py  sfno.py  xarray.py
earth-2-federation/scripts/: build-api-wheel.sh  build-wheel.sh
src/: .gitignore  .nspect-allowlist.toml  Dockerfile  README.md  build_images.sh  federations.yaml  pyproject.toml  run_container.sh
src/dfm/: __init__.py
src/dfm/api/: __init__.py  _block.py  _function_call.py  _process.py  _well_known_id.py
src/dfm/api/aviation/: __init__.py  _compute_crosswind.py  _compute_ellrod_index.py  _compute_icing_probability.py  _compute_wind_shear.py  _extract_route_weather.py  _load_metar_data.py  _load_pirep_data.py  _load_sigmet_data.py  _load_taf_data.py  _score_route_hazards.py
src/dfm/api/data_loader/: __init__.py  _load_era5_model_data.py  _load_hrrr_model_data.py
src/dfm/api/dfm/: __init__.py  _await_message.py  _constant.py  _execute.py  _geojson_file.py  _greetme.py  _list_texture_files.py  _push_response.py  _receive_message.py  _send_message.py  _signal_all_done.py  _signal_client.py  _texture_file.py  _texture_files_bundle.py  _zip2.py
src/dfm/api/discovery/: __init__.py  _field_advice.py  _response.py
src/dfm/api/esri/: __init__.py  _load_elevation_data.py  _load_metar_wind_data.py  _load_us_wind_forecast_data.py
src/dfm/api/nwp/: __init__.py  _invoke_nim_nwp_dnn.py
src/dfm/api/response/: __init__.py  _error_response.py  _heartbeat_response.py  _process_response.py  _response.py  _response_body.py  _status_response.py  _value_response.py
src/dfm/api/xarray/: _average_pointwise.py  _convert_to_uint8.py  _open_dataset.py  _render_uint8_to_images.py  _variable_norm.py  _write_to_zarr.py
src/dfm/client/: README.md  __init__.py  _async_client.py  _common.py
src/dfm/common/: __init__.py  _adviseable_base_model.py  _polymorphic_base_model.py
src/dfm/config/: __init__.py  _site_config.py
src/dfm/config/adapter/: __init__.py  _adapter_config.py
src/dfm/config/common/: __init__.py  _fsspec_conf.py
src/dfm/config/provider/: __init__.py  _basic_provider.py  _esri_provider.py  _fsspec_provider.py  _hrrr_provider.py  _provider_config.py  _source_target_fsspec_provider.py
src/dfm/config/resource/: __init__.py  _resource_configs.py
src/dfm/secrets/: __init__.py  _site_secrets.py
src/k8s/common/: log_conf.yml  log_conf_json.yml
src/k8s/execute/: Dockerfile  execute_pubsub.py  run.sh
src/k8s/process/: Dockerfile  process_fastapi.py  run.sh
src/k8s/scheduler/: Dockerfile  __init__.py  run.sh  scheduler_pubsub.py
src/pipelines/: era5.py  esri.py  fourcastnet.py  hrrr.py
src/scripts/: startup.sh
src/tests/common/: __init__.py  _mock_adapter.py  _mock_dfm_request.py  _mock_redis.py
src/tests/dfm/: test_dfm_api_blocks.py  test_dfm_api_discovery.py  test_dfm_api_discovery_advice_builder.py  test_dfm_api_parsing.py  test_dfm_common_service_auth.py  test_dfm_config_parsing.py  test_dfm_secrets_parsing.py  test_dfm_service_common_request_dfm_request.py  test_dfm_service_execute.py  test_dfm_service_execute_adapter_await_message.py  test_dfm_service_execute_adapter_binary_adapter.py  test_dfm_service_execute_adapter_caching.py  test_dfm_service_execute_adapter_greetme.py  test_dfm_service_execute_adapter_load_ecmwf_era5_data.py  test_dfm_service_execute_adapter_load_elevation_data.py  test_dfm_service_execute_adapter_load_elevation_data_caching_iterator.py  test_dfm_service_execute_adapter_load_gfs_era5_data.py  test_dfm_service_execute_adapter_load_gfs_era5_s3_data.py  test_dfm_service_execute_adapter_load_hrrr_data.py  test_dfm_service_execute_adapter_load_metar_wind_data.py  test_dfm_service_execute_adapter_load_metar_wind_data_caching_iterator.py  test_dfm_service_execute_adapter_load_us_wind_forecast_data.py  test_dfm_service_execute_adapter_load_us_wind_forecast_data_cache_iterator.py  test_dfm_service_execute_adapter_signal_all_done.py  test_dfm_service_execute_adapter_stream.py  test_dfm_service_execute_adapter_xarray_average_pointwise.py  test_dfm_service_execute_adapter_xarray_convert_to_uint8.py  test_dfm_service_execute_adapter_xarray_open_dataset.py  test_dfm_service_execute_adapter_xarray_variable_norm.py  test_dfm_service_execute_adapter_xarray_write_to_zarr.py  test_dfm_service_execute_site.py  test_dfm_xarray_schema.py  test_pydantic_bug.py  utils.py
src/tests/files/: adapters_test_ecmwf_era5_data.nc  adapters_test_gfs_era5_data.nc  example_esri_us_wind_forecast.json  simple_site_config.yaml  simple_site_secrets.yaml
(+471 files in other folders)
